--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,15 @@
         android:theme="@style/Theme.Kotlin"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".SecondActivityIntentExplicit"
+            android:exported="false" />
+        <activity
+            android:name=".FirstActivityIntentExplicit"
+            android:theme="@style/Base.Theme.john1"
+            android:exported="false" />
+        <activity
+            android:name=".ExampleIntentExplicit"
+            android:theme="@style/Base.Theme.john"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
